--- a/app/src/main/res/values-ar-rSA/strings.xml
+++ b/app/src/main/res/values-ar-rSA/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="navigation_back">عودة</string>
-    <string name="nav_open_friends">فتح قائمة الاصدقاء</string>
+    <string name="nav_open_friends">فتح قائمة الرفاق</string>
     <string name="nav_open_search">فتح بحث القناة</string>
     <string name="nav_open_mentions">عرض إشارات عامة</string>
     <string name="login_landing_title">مرحبا بك في OpenCord!</string>
